# LocalLLMTrace

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  build-docker.sh  docker-compose.yml  main.py  openai_client.py  pyproject.toml  requirements.txt  setup-script.sh  setup.sh  supervisord.conf
test/: curl-full.sh  curl-simple.sh  openai_client.py
